# eu-short-flights

./: .gitignore  QUICKSTART.Rmd  README.md  european_flights.py  main.py  plot_railways.py  pyproject.toml
.claude/: settings.local.json
data/: airports.gpkg  build_log.txt  hsr_lines.gpkg  hsr_stations.gpkg  master_flight_routes_2019.csv  master_routes_clean.csv  railways_GL2017_EU.shp.xml  railways_GL2017_EU.shx
data/clean/: airports_pax_2019.gpkg  all_airports.gpkg  hsr_western_eu.gpkg  main_airports.gpkg  master_routes_clean.csv  ne_10m_countries.gpkg
data/clean/outputs/: gl2017_passenger_overlap_pairs.csv  gl2017_passenger_overlap_segments.gpkg
data/old/: railways_GL2017_EU.dbf
docs/: Project Planning.md
final/: 03_top10_route_pairs.csv  05_airport_suitability.csv  08_carbon_optimal_routes.csv  09_airport_leaderboard.csv  10_carbon_sensitivity_data.csv  11_carbon_delta_65_130.csv  GIS_Final_Short_Haul_Flights_HSR.Rmd  PRESENTATION_SUMMARY.md  gpt-research.md
qgis/: test.qgz
scripts/: analysis.R  barcelona_el_prat_routes_rail_notebook.Rmd  call_eurostat.py  check_gl2017_passenger_overlaps.py  check_icao.R  draft_notebook.Rmd  fetch_hsr_osm.py  hsr_light.json  hsr_vulnerability.R  join_airports_passengers.R  join_flight_routes.R  paths.R  second_draft_notebook.Rmd  task_c_basemap.R  task_c_basemap_gl2017.R
