[project]
name = "short-flights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "python-docx>=1.2.0",
    "pyhafas>=0.5.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "quackosm>=0.17.0",
    "logging>=0.4.9.6",
    "networkx>=3.6.1",
    "osmium>=4.3.0",
    "osmnx>=2.1.0",
    "pyogrio>=0.12.1",
    "eurostat>=1.1.1",
]
